refactoring to address review comments