@@ -186,14 +186,13 @@ public class BioEntityDAO {
     }
 
     /**
-     * @param beProperties - a List of String array, which contains values:
+     * @param beProperties - a Collection of Pair, which contains values:
      *                     [0] - BioEntity identifier
-     *                     [1] - property name
-     *                     [2] - property value
+     *                     [1] - BEPropertyValue
      * @param beType
      * @param software
      */
-    public void writeBioEntityToPropertyValues(final Collection<List<String>> beProperties, final BioEntityType beType,
+    public void writeBioEntityToPropertyValues(final Collection<Pair<String, BEPropertyValue>> beProperties, final BioEntityType beType,
                                                final Software software) {
 
         String query = "insert into a2_bioentitybepv (bioentityid, bepropertyvalueid, softwareid) \n" +
@@ -205,14 +204,14 @@ public class BioEntityDAO {
                 "  ?)";
 
 
-        ListStatementSetter<List<String>> statementSetter = new ListStatementSetter<List<String>>() {
+        ListStatementSetter<Pair<String, BEPropertyValue>> statementSetter = new ListStatementSetter<Pair<String, BEPropertyValue>>() {
             long softwareId = software.getSoftwareid();
 
             public void setValues(PreparedStatement ps, int i) throws SQLException {
-                ps.setString(1, list.get(i).get(0));
+                ps.setString(1, list.get(i).getFirst());
                 ps.setLong(2, beType.getId());
-                ps.setString(3, list.get(i).get(2));
-                ps.setLong(4, getBioEntityPropertyByName(list.get(i).get(1)).getBioEntitypropertyId());
+                ps.setString(3, list.get(i).getSecond().getValue());
+                ps.setLong(4, list.get(i).getSecond().getProperty().getBioEntitypropertyId());
                 ps.setLong(5, softwareId);
             }
 
